# bfrvc

./: README.md  pyproject.toml  setup.py
bfrvc/: __init__.py  core.py
bfrvc/configs/: config.py
bfrvc/infer/: infer.py  pipeline.py
bfrvc/lib/: utils.py
bfrvc/lib/algorithm/: attentions.py  discriminators.py  encoders.py  modules.py  residuals.py  synthesizers.py
bfrvc/lib/tools/: config_dw.py  model_download.py  prerequisites_download.py
bfrvc/predictors/: f0_extractor.py
bfrvc/unit/algorithm/: attentions.py  discriminators.py  encoders.py  modules.py  residuals.py  synthesizers.py
bfrvc/unit/tools/: config_dw.py  model_download.py  tts_voices.json
